fixed z-index of the player to be on the top

--- a/src/css/musicPlayer.css
+++ b/src/css/musicPlayer.css
@@ -17,7 +17,7 @@
     background-color: rgba(145, 196, 195, 0.8);
     backdrop-filter: blur(5px);
     cursor: pointer;
-    z-index: 1000;
+    z-index: 100;
     font-size: 1.8rem;
     transition: transform 0.2s ease;
 }
@@ -36,6 +36,7 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
+
     
     /* Frosted Glass Effect */
     background-color: rgba(128, 161, 186, 0.6);
@@ -47,6 +48,7 @@
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
     width: 300px;
     height: 450px;
+    z-index: 100;
 }
 
 /* --- Song Info --- */
